--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,8 +1,9 @@
 #navbar {
-    @apply top-0 z-50 px-4 w-full dark:border-white/15 border-primary/15 border-b-1 duration-150;
+    @apply top-0 z-50 px-4 w-full dark:border-white/15 border-primary/15 border-b-1 duration-300;
+    
 }
 #navbar.scrolled {
-    @apply shadow-xl dark:shadow-thick bg-background/95 dark:bg-custom-secondary/85 backdrop-blur;
+    @apply shadow-xl dark:shadow-thick bg-background/85 dark:bg-custom-secondary/85 backdrop-blur;
 }
 #navbar .inner-wrapper {
     @apply flex py-4 items-center gap-4 space-x-4 justify-between sm:space-x-0;
@@ -11,7 +12,7 @@
     @apply flex sm:basis-1/5 gap-4;
 }
 .actions {
-    @apply flex sm:basis-1/5 gap-4;
+    @apply flex sm:basis-1/5 gap-4 items-center justify-end;
 }
 /* Desktop */
 .navigation {
@@ -23,12 +24,12 @@
     @apply sm:hidden flex items-center text-primary dark:text-white;
 }
 #mobile-menu {
-    @apply sm:hidden transition-all duration-300 h-0 opacity-0 overflow-hidden flex flex-col items-start pb-1.5 divide-y divide-zinc-200 dark:divide-zinc-700;
-}
-#mobile-menu.closed {
-    @apply h-auto opacity-100;
+    @apply sm:hidden transition-all duration-300 h-0 opacity-0 overflow-hidden flex flex-col items-start divide-y divide-zinc-200 dark:divide-zinc-700;
 }
 #mobile-menu.open {
+    @apply h-auto opacity-100 pb-1.5;
+}
+#mobile-menu.closed {
     @apply h-0 opacity-0;
 }
 #mobile-menu .item {
